Update head.html to enable MathJax

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -5,6 +5,13 @@
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  
+  <!-- Enable MathJax -->
+  {% if page.usemathjax %}
+    <script type="text/javascript" async 
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+  {% end if %}
 
   <title>
     {% if page.title == "Home" %}
