--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -8,8 +8,8 @@
   
   <!-- Enable MathJax -->
   {% if page.usemathjax %}
-    <script type="text/javascript" async 
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_CHTML">
     </script>
   {% end if %}
 
