--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -12,6 +12,16 @@
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
     </script>
   {% endif %}
+  
+  <!-- Google Analytics - Global site tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G84CM55HBV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G84CM55HBV');
+  </script>
 
   <title>
     {% if page.title == "Home" %}
