--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -26,7 +26,9 @@
         {% endif %}
       {% endfor %}
 
-    <a class="sidebar-nav-item" href="https://twitter.com/MattBayer3">Twitter</a> &middot <a class="sidebar-nav-item" href="https://github.com/mattbayer">GitHub</a>
+    <span>
+      <a class="sidebar-nav-item" href="https://twitter.com/MattBayer3">Twitter</a> &middot <a class="sidebar-nav-item" href="https://github.com/mattbayer">GitHub</a>
+    </span>
     <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
     <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
     <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
