--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -11,6 +11,7 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
+      <a class="sidebar-nav-item{% if page.title == 'All Posts' %} active{% endif %}" href="{{ 'allposts.html' | absolute_url }}">All Posts</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
