Add logo to sidebar

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -1,5 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
+    
+    <img src='{{"/public/LogoCovidWI.png" | absolute_url}}'>
+    
     <div class="sidebar-about">
       <h1>
         <a href="{{ '/' | absolute_url }}">
