Add class for sidebar logo to sidebar.html

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -1,7 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     
-    <img src='{{"/public/LogoCovidWI.png" | absolute_url}}'>
+    <div class="sidebar-logo">
+      <img src='{{"/public/LogoCovidWI.png" | absolute_url}}'>
+    </div>
     
     <div class="sidebar-about">
       <h1>
