--- a/docs/public/css/hyde.css
+++ b/docs/public/css/hyde.css
@@ -123,7 +123,8 @@ a.sidebar-nav-item:focus {
     */
     position: absolute;
     right:  1rem;
-    bottom: 1rem;
+    /*bottom: 1rem;*/
+    top: 10%;
     left:   1rem;
   }
 }
