--- a/docs/public/css/hyde.css
+++ b/docs/public/css/hyde.css
@@ -76,6 +76,7 @@ html {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem
   width: 8rem;
 }
 
@@ -95,6 +96,7 @@ html {
 /* Sidebar nav */
 .sidebar-nav {
   margin-bottom: 1rem;
+  margin-top:    1.5rem;
 }
 .sidebar-nav-item {
   display: block;
