--- a/docs/_layouts/dashboard.html
+++ b/docs/_layouts/dashboard.html
@@ -15,6 +15,8 @@ layout: default
   <a class="dashboard-nav-item{% if page.url == '/dashboard/regional/' %} active{% endif %}" href="{{ '/dashboard/regional/' | absolute_url }}">Regional</a>
   |
   <a class="dashboard-nav-item{% if page.url == '/dashboard/countymap/' %} active{% endif %}" href="{{ '/dashboard/countymap/' | absolute_url }}">County Map</a>
+  |
+  <a class="dashboard-nav-item{% if page.url == '/dashboard/prisons/' %} active{% endif %}" href="{{ '/dashboard/prisons/' | absolute_url }}">Prisons</a>
   
   <hr style="margin: 1rem 0 0">
   
