--- a/docs/_includes/tables/Prisons-Pop-Cases.html
+++ b/docs/_includes/tables/Prisons-Pop-Cases.html
@@ -31,3 +31,22 @@
 <script>
   $('table.display').DataTable()
 </script>
+
+
+<table class="display">
+  {% for row in site.data.prisons %}
+    {% if forloop.first %}
+    <thead>
+      <tr>
+        {% for pair in row %}
+          <th>{{ pair[0] }}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    {% endif %}
+
+    {% tablerow pair in row %}
+      {{ pair[1] }}
+    {% endtablerow %}
+  {% endfor %}
+</table>
