--- a/docs/_includes/tables/Prisons-Pop-Cases.html
+++ b/docs/_includes/tables/Prisons-Pop-Cases.html
@@ -4,13 +4,7 @@
   <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 </head>
 
-<table class="display" style="font-size:0.6rem">
-<!--
-<colgroup>
-<col width="30%" />
-<col width="70%" />
-</colgroup>
--->
+<table class="display compact" style="font-size:0.6rem">
   {% for row in site.data.prisons %}
     {% if forloop.first %}
     <thead>
