--- a/docs/_includes/tables/Prisons-Pop-Cases.html
+++ b/docs/_includes/tables/Prisons-Pop-Cases.html
@@ -10,7 +10,7 @@
     <thead>
       <tr>
         {% for pair in row %}
-          <th>{{ pair[0] }}</th>
+          <th style="text-align:left">{{ pair[0] }}</th>
         {% endfor %}
       </tr>
     </thead>
