--- a/docs/_includes/tables/Prisons-Pop-Cases.html
+++ b/docs/_includes/tables/Prisons-Pop-Cases.html
@@ -4,7 +4,9 @@
   <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
   
   <style>
-    
+    table.dataTable thead th.dt-head-left {
+      padding: 4px 4px;
+    }  
   </style>
 </head>
 
