--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -47,4 +47,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
+  
+  <!-- Search engine optimization plugin -->
+  {% seo %}
 </head>
