--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -3,7 +3,7 @@
     
     {% if site.logo != null %}
       <div class="sidebar-logo">
-        <img src='{{ site.logo | absolute_url }}'>
+        <img src="{{ site.logo | absolute_url }}" alt="Covid in Wisconsin Logo">
       </div>
     {% endif %}
     
