--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -8,7 +8,7 @@
   
   <!-- Enable MathJax -->
   {% if page.usemathjax %}
-    <script id="MathJax-script" async
+    <script id="MathJax-script" defer
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
     </script>
   {% endif %}
