--- a/docs/_layouts/dashboard.html
+++ b/docs/_layouts/dashboard.html
@@ -12,7 +12,7 @@ layout: default
 
   <a class="dashboard-nav-item{% if page.url == '/dashboard/' %} active{% endif %}" href="{{ '/dashboard/' | absolute_url }}">Tracking</a>
   |
-  <a class="dashboard-nav-item{% if page.url == '/dashboard/state/' %} active{% endif %}" href="{{ '/dashboard/' | absolute_url }}">State</a>
+  <a class="dashboard-nav-item{% if page.url == '/dashboard/state/' %} active{% endif %}" href="{{ '/dashboard/state/' | absolute_url }}">State</a>
   |
   <a class="dashboard-nav-item{% if page.url == '/dashboard/regional/' %} active{% endif %}" href="{{ '/dashboard/regional/' | absolute_url }}">Regional</a>
   |
