--- a/docs/_layouts/dashboard.html
+++ b/docs/_layouts/dashboard.html
@@ -12,12 +12,16 @@ layout: default
 
   <a class="dashboard-nav-item{% if page.url == '/dashboard/' %} active{% endif %}" href="{{ '/dashboard/' | absolute_url }}">Cases</a>
   |
+  <a class="dashboard-nav-item{% if page.url == '/dashboard/deaths-hosp/' %} active{% endif %}" href="{{ '/dashboard/deaths-hosp/' | absolute_url }}">Deaths and Hospitalizations</a>
+  |
+  <!--
   <a class="dashboard-nav-item{% if page.url == '/dashboard/state/' %} active{% endif %}" href="{{ '/dashboard/state/' | absolute_url }}">State</a>
   |
   <a class="dashboard-nav-item{% if page.url == '/dashboard/regional/' %} active{% endif %}" href="{{ '/dashboard/regional/' | absolute_url }}">Regional</a>
   |
   <a class="dashboard-nav-item{% if page.url == '/dashboard/countymap/' %} active{% endif %}" href="{{ '/dashboard/countymap/' | absolute_url }}">County Map</a>
   |
+  -->
   <a class="dashboard-nav-item{% if page.url == '/dashboard/prisons/' %} active{% endif %}" href="{{ '/dashboard/prisons/' | absolute_url }}">Prisons</a>
   
   <hr style="margin: 1rem 0 0">
